# oe-alliance-plugins

./: Makefile.am  configure.ac
Blindscan/po/: pl.po
FirmwareUpgrade/po/: pl.po
LCD4linux/po/: pl.mo
LCD4linux/src/: plugin.py
OnDemand/src/: CommonModules.py
TunerServer/src/: plugin.py
VuRemote/src/: plugin.py
